# naive_interpolator

./: CMakeLists.txt  readme.md  todo.md
include/: ni.h
include/internal/d1/: ni_alg_helper.h  ni_any_owner.h  ni_any_view.h  ni_cubic.h  ni_interp_base.h  ni_interp_owner.h  ni_interp_view.h  ni_linear.h  ni_method.h  ni_nearest.h  ni_next.h  ni_options.h  ni_prev.h  ni_quadratic.h
include/internal/util/: ni_concept.h  ni_log.h
include/ni/: ni.h
include/ni/d1/: any_owner.h  any_view.h  owner.h  view.h
include/ni/d1/internal/: alg_helper.h  any_owner.h  any_view.h  base.h  cubic.h  kind.h  linear.h  nearest.h  next.h  options.h  owner.h  prev.h  quadratic.h  view.h
include/ni/util/: concept.h  log.h  range.h
test/: CMakeLists.txt  main.cpp
